fixed modal images on mobiles

--- a/src/components/ViewButton/style.css
+++ b/src/components/ViewButton/style.css
@@ -123,3 +123,13 @@ table {
   outline: none;
   border-radius: 0% !important;
 }
+
+.product-images {
+  flex-direction: column;
+}
+
+@media (max-width: 992px) {
+  .product-images {
+    flex-direction: row;
+  }
+}
